--- a/source/nodejs/adaptivecards-visualizer/css/app.css
+++ b/source/nodejs/adaptivecards-visualizer/css/app.css
@@ -74,16 +74,17 @@ body {
         -ms-flex-flow: column;
             flex-flow: column;
     -webkit-box-flex: 1;
-        -ms-flex: 1 1 50%;
-            flex: 1 1 50%;
+        -ms-flex: 1 1 60%;
+            flex: 1 1 60%;
     overflow: auto;
     margin-right: 10px;
 }
 
 .rightPane {
     -webkit-box-flex: 1;
-        -ms-flex: 1 1 50%;
-            flex: 1 1 50%;
+        -ms-flex: 1 1 40%;
+            flex: 1 1 40%;
+    min-width: 350px;
     overflow: auto;
     margin-left: 10px;
 }
