--- a/source/nodejs/adaptivecards-visualizer/css/app.css
+++ b/source/nodejs/adaptivecards-visualizer/css/app.css
@@ -1,3 +1,7 @@
+* {
+    box-sizing: border-box;
+}
+
 body {
     font-family: 'Segoe UI', sans-serif;
     font-size: 14px;
@@ -5,6 +9,11 @@ body {
     height: 100vh;
     margin: 0;
     padding: 0;
+    /* There seems to be a problem with Monaco in all browsers except Chrome
+       where once IntelliSense has been invoked the page gets an undesired
+       vertical scrollbar. I haven't found a way to work around the problem
+       aside from hiding the scrollbar. */
+    overflow: hidden;
 }
 
 .popupOverlay {
@@ -38,7 +47,7 @@ body {
     -webkit-box-direction: normal;
         -ms-flex-flow: column;
             flex-flow: column;
-    height: inherit;
+    height: 100%;
 }
 
 .uiHeader {
@@ -60,9 +69,9 @@ body {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    height: 100%;
     min-height: 0;
     margin: 10px;
+    flex: 1 1 100%;
 }
 
 .leftPane {
@@ -77,7 +86,6 @@ body {
         -ms-flex: 1 1 55%;
             flex: 1 1 55%;
     overflow: auto;
-    margin-right: 10px;
 }
 
 .rightPane {
@@ -95,14 +103,10 @@ div.markupRender {
 }
 
 #editor {
-    -webkit-box-flex: 1;
-        -ms-flex: 1 1 auto;
-            flex: 1 1 auto;
-    box-sizing: border-box;
-    resize: none;
-    white-space: nowrap;
-    overflow: auto;
     border: 1px solid #EEEEEE;
+    overflow: hidden;
+    width: 100%;
+    height: 100%;
 }
 
 .button {
