--- a/source/android/mobile/src/main/res/layout/content_main_activity_adaptive_cards_sample.xml
+++ b/source/android/mobile/src/main/res/layout/content_main_activity_adaptive_cards_sample.xml
@@ -75,6 +75,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:orientation="vertical"
+                            android:padding="0dp"
                             android:background="@drawable/border">
                         </LinearLayout>
                     </ScrollView>
