Implementing container style

--- a/source/android/mobile/src/main/res/layout/content_main_activity_adaptive_cards_sample.xml
+++ b/source/android/mobile/src/main/res/layout/content_main_activity_adaptive_cards_sample.xml
@@ -109,7 +109,7 @@
                             android:layout_height="wrap_content"
                             android:background="@drawable/border"
                             android:orientation="vertical"
-                            android:padding="0dp"></LinearLayout>
+                            ></LinearLayout>
                     </ScrollView>
                 </LinearLayout>
 
