cortana host added, fixing payloads

--- a/source/nodejs/adaptivecards-site/themes/adaptivecards/layout/sample.ejs
+++ b/source/nodejs/adaptivecards-site/themes/adaptivecards/layout/sample.ejs
@@ -19,7 +19,7 @@
     
     <!-- mobile nav -->
     <div class="w3-container w3-hide-large">
-      <select id="menu-nav">
+      <select id="menu-nav">y
         <% page.samples.forEach(function(sample) { %>
         <% if(is_current(sample.htmlPath)) { %>
           <option value='<%- url_for(sample.htmlPath) %>' selected="selected"><%= sample.name %></option>
