--- a/source/nodejs/adaptivecards-site/themes/adaptivecards/layout/visualizer.ejs
+++ b/source/nodejs/adaptivecards-site/themes/adaptivecards/layout/visualizer.ejs
@@ -2,20 +2,20 @@
 <div class="w3-row w3-light-grey w3-padding">
   <div class="w3-container w3-twothird w3-middle ">
     <div id="editCard" class="button">Card editor</div>
-    <div id="editConfig" class="button subdued" style="margin-left: 4px;">Configuration editor</div>
+    <div id="editConfig" class="button subdued" style="margin-left: 4px;">Host Config editor</div>
 
     <div style="display: none">
         <input type="file" id="filePicker">
     </div>
-    <div id="loadSample" class="button">Load sample from file...</div>
+    <div id="loadSample" class="button" style="margin-left: 4px;">Load sample from file...</div>
   </div>
 
 
 
   <div style="w3-container w3-onethird">
-        <span style="margin-right: 6px;">Select a Host App:</span>
-        <select id="hostContainerPicker" class="select"></select>
-    </div>
+    <span style="margin-right: 6px;">Preview Host App:</span>
+    <select id="hostContainerPicker" class="select"></select>
+  </div>
 </div>
   
 <div class="w3-row">
