--- a/source/nodejs/adaptivecards-site/themes/adaptivecards/layout/sample.ejs
+++ b/source/nodejs/adaptivecards-site/themes/adaptivecards/layout/sample.ejs
@@ -14,21 +14,27 @@
   </nav>
     
   <div class="w3-main" style="margin-left: 260px">
-    <h1 class="w3-container"><%= page.title %></h1>
 
-    
-    <!-- mobile nav -->
-    <div class="w3-container w3-hide-large">
-      <select id="menu-nav">y
-        <% page.samples.forEach(function(sample) { %>
-        <% if(is_current(sample.htmlPath)) { %>
-          <option value='<%- url_for(sample.htmlPath) %>' selected="selected"><%= sample.name %></option>
-        <% } else { %>
-          <option value='<%- url_for(sample.htmlPath) %>'><%= sample.name %></option>
-        <% } %> 
-        <% }) %>
-      </select>
+    <div class="w3-container">
+      <h1><%= page.title %></h1>
+      <p>These samples are just a teaser of the type of cards you can create. Go ahead and tweak them to make any scenario possible!</p>
+
+      <h2><%= page.sample.name %></h2>
+      
+      <!-- mobile nav -->
+      <div class="w3-hide-large">
+        <select id="menu-nav">y
+          <% page.samples.forEach(function(sample) { %>
+          <% if(is_current(sample.htmlPath)) { %>
+            <option value='<%- url_for(sample.htmlPath) %>' selected="selected"><%= sample.name %></option>
+          <% } else { %>
+            <option value='<%- url_for(sample.htmlPath) %>'><%= sample.name %></option>
+          <% } %> 
+          <% }) %>
+        </select>
+      </div>
     </div>
+
 
     
     <%- partial("_partial/code-example", { examplePath: page.sample.jsonPath }) %>
