used min scripts, added app insights, fix container styles

--- a/source/nodejs/adaptivecards-site/themes/adaptivecards/layout/explorer.ejs
+++ b/source/nodejs/adaptivecards-site/themes/adaptivecards/layout/explorer.ejs
@@ -28,14 +28,16 @@
       <div class="w3-hide-large">
         <select id="menu-nav">
           <% page.schema.forEach(function(root) { %>
-            <option class="noLink" disabled="disabled"><%= root.title %></option>
-            <% root.children.forEach(function(child) { %>
-              <% if(is_current("explorer/" + child.name + ".html")) { %>
-                <option value='<%- url_for("explorer/" + child.name + ".html") %>' selected="selected"><%= child.name %></option>
-              <% } else { %>
-                <option value='<%- url_for("explorer/" + child.name + ".html") %>'><%= child.name %></option>
-              <% } %> 
-          <% }) %>
+            <optgroup class="noLink" label='<%= root.title %>'>
+              <% root.children.forEach(function(child) { %>
+                <% if(is_current("explorer/" + child.name + ".html")) { %>
+                  <option value='<%- url_for("explorer/" + child.name + ".html") %>' selected="selected"><%= child.name %></option>
+                <% } else { %>
+                  <option value='<%- url_for("explorer/" + child.name + ".html") %>'><%= child.name %></option>
+                <% } %> 
+          
+              <% }) %>
+             </optgroup>
           <% }) %>
         </select>
       </div>
