add visualizer mobile friendly message

--- a/source/nodejs/adaptivecards-site/themes/adaptivecards/layout/visualizer.ejs
+++ b/source/nodejs/adaptivecards-site/themes/adaptivecards/layout/visualizer.ejs
@@ -1,7 +1,12 @@
 
 <!-- this is copied from ../adaptivecards-visualizer/index.html -->
+<div class="w3-container w3-hide-medium w3-hide-large">
+  <h1>Visualizer</h1>
+  <h4>Sorry!</h4>
+  <p>The Visualizer doesn't work on mobile at this time. Be sure to check it out on your PC though.</p>
+</div>
 
-<div class="w3-row w3-light-grey w3-padding">
+<div class="w3-row w3-light-grey w3-padding w3-hide-small">
     <div class="w3-col s12 m6 l7">
         <div id="editCard" class="button">Card editor</div>
         <div id="editConfig" class="button subdued" style="margin-left: 4px;">Host Config editor</div>
@@ -17,7 +22,7 @@
     </div>
 </div>
     
-<div class="w3-row">
+<div class="w3-row w3-hide-small">
 
     <div id="editor" class="w3-col s12 m6 l7 w3-mobile">
     </div>
