--- a/source/nodejs/adaptivecards-site/themes/adaptivecards/layout/_partial/footer.ejs
+++ b/source/nodejs/adaptivecards-site/themes/adaptivecards/layout/_partial/footer.ejs
@@ -36,17 +36,4 @@
 
 <%- js('js/script') %>
 
-
-
-<script>
-
-  // Used to toggle the menu on small screens when clicking on the menu button
-  function toggleNav() {
-      var x = document.getElementById("nav");
-      if (x.className.indexOf("w3-show") == -1) {
-          x.className += " w3-show";
-      } else { 
-          x.className = x.className.replace(" w3-show", "");
-      }
-  }
-</script>
+<script type="text/javascript">  var appInsights=window.appInsights||function(a){    function b(a){c[a]=function(){var b=arguments;c.queue.push(function(){c[a].apply(c,b)})}}var c={config:a},d=document,e=window;setTimeout(function(){var b=d.createElement("script");b.src=a.url||"https://az416426.vo.msecnd.net/scripts/a/ai.0.js",d.getElementsByTagName("script")[0].parentNode.appendChild(b)});try{c.cookie=d.cookie}catch(a){}c.queue=[];for(var f=["Event","Exception","Metric","PageView","Trace","Dependency"];f.length;)b("track"+f.pop());if(b("setAuthenticatedUserContext"),b("clearAuthenticatedUserContext"),b("startTrackEvent"),b("stopTrackEvent"),b("startTrackPage"),b("stopTrackPage"),b("flush"),!a.disableExceptionTracking){f="onerror",b("_"+f);var g=e[f];e[f]=function(a,b,d,e,h){var i=g&&g(a,b,d,e,h);return!0!==i&&c["_"+f](a,b,d,e,h),i}}return c    }({        instrumentationKey:"bd0c4f36-dd0f-4984-8f32-32cb44d6055a"    });      window.appInsights=appInsights,appInsights.queue&&0===appInsights.queue.length&&appInsights.trackPageView();</script>
