fix cortana styling, update video

--- a/source/nodejs/adaptivecards-site/themes/adaptivecards/layout/index.ejs
+++ b/source/nodejs/adaptivecards-site/themes/adaptivecards/layout/index.ejs
@@ -3,7 +3,7 @@
 
 <div id="vidbanner" class="videobanner">
     <div style="text-align:center">
-        <video style="width: 1000px;" src="https://adaptivecardsstorage.blob.core.windows.net/asset-4b6e0661-3689-4a17-95af-a3471e043084/AdaptiveCardsWebsiteSizzleLoop.mp4?sv=2015-07-08&sr=c&si=2085cac9-c526-416d-ac9e-9487f0b8c725&sig=2Sff62Cw6eGqdeFrdgGXh8ji5EhLV8XwpSiQjgilncA%3D&st=2017-09-20T03%3A26%3A15Z&se=2117-09-20T03%3A26%3A15Z" autoplay="" loop=""></video>
+        <video autoplay="" style="width: 1000px;" src="https://adaptivecardsblob.blob.core.windows.net/assets/AdaptiveIntroVideo.mp4"></video>
     </div>
 </div>
 
