--- a/source/nodejs/adaptivecards-designer/css/card-designer.css
+++ b/source/nodejs/adaptivecards-designer/css/card-designer.css
@@ -2,11 +2,12 @@
 }
 
 .acd-peer:hover {
-    border: 1px solid rgba(0, 0, 255, 0.2);
+    border: 2px solid rgba(0, 0, 255, 0.2);
 }
 
 .acd-peer.selected {
-    border: 1px solid rgba(255, 0, 0, 0.2);
+    border: 2px solid rgba(255, 0, 0, 0.2);
+    background-color: rgba(255, 0, 0, 0.05);
 }
 
 .acd-badge {
