--- a/source/nodejs/adaptivecards-designer/css/card-designer.css
+++ b/source/nodejs/adaptivecards-designer/css/card-designer.css
@@ -1,3 +1,7 @@
+.acd-designersurface.dragging {
+    cursor: move;
+}
+
 .acd-peer {
 }
 
@@ -12,6 +16,9 @@
 
 .acd-peer.dragover {
     border: 2px solid rgba(255, 0, 255, 0.1);
+}
+
+.acd-peer.dragging {
 }
 
 .acd-separation {
