--- a/source/nodejs/adaptivecards-designer/css/card-designer.css
+++ b/source/nodejs/adaptivecards-designer/css/card-designer.css
@@ -2,6 +2,12 @@
     cursor: move;
 }
 
+.acd-palette-item {
+    border: 1px solid red;
+    padding: 8px;
+    cursor: pointer;
+}
+
 .acd-peer {
 }
 
