Added Frame Editor to Visualizer

--- a/source/uwp/Visualizer/MainPage.xaml
+++ b/source/uwp/Visualizer/MainPage.xaml
@@ -47,6 +47,12 @@
                         Label="Host config"
                         IsCompact="True"
                         Click="AppBarHostConfigEditor_Click"/>
+                    <AppBarToggleButton
+                        x:Name="AppBarFrameEditor"
+                        Icon="Document"
+                        Label="Frame"
+                        IsCompact="True"
+                        Click="AppBarFrameEditor_Click"/>                    
                 </StackPanel>
             </CommandBar.Content>
             <CommandBar.SecondaryCommands>
@@ -117,6 +123,36 @@
             </Grid>
         </Grid>
 
+        <!--Frame editor-->
+        <Grid
+            Grid.Row="1"
+            x:Name="FrameEditorView"
+            Visibility="Collapsed">
+
+            <Rectangle
+                Fill="Black"
+                Opacity="0.3"
+                Tapped="FrameTransparentBackdrop_Tapped"/>
+
+            <!--We apply padding on right to keep the preview visible-->
+            <Grid
+                Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
+                BorderThickness="0,0,8,0"
+                BorderBrush="{ThemeResource SystemControlBackgroundAccentBrush}"
+                Margin="0,0,320,0">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="*"/>
+                </Grid.RowDefinitions>
+                <TextBlock
+                    Text="Frame"
+                    Style="{ThemeResource SubtitleTextBlockStyle}"
+                    Margin="6"/>
+                <local:GenericDocumentView
+                    Grid.Row="1"
+                    DataContext="{Binding FrameEditor}"/>
+            </Grid>
+        </Grid>
 
 
 
