--- a/source/nodejs/adaptivecards-designer/css/card-designer.css
+++ b/source/nodejs/adaptivecards-designer/css/card-designer.css
@@ -17,7 +17,9 @@
 
 .acd-peer.selected {
     background-color: rgba(255, 0, 0, 0.05);
-    border: 3px solid rgba(255, 0, 0, 0.05);
+    border: 3px solid rgba(255, 0, 0, 0.2);
+    margin: -3px;
+    box-sizing: content-box;
 }
 
 .acd-peer.dragover {
