--- a/source/nodejs/adaptivecards-visualizer/css/liveTile.css
+++ b/source/nodejs/adaptivecards-visualizer/css/liveTile.css
@@ -10,13 +10,6 @@
   background-color: rgba(0, 0, 0, 0.15);
 }
 
-.skypeContainer {
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-align: start;
-      align-items: flex-start;
-}
-
 a.ac-anchor {
   text-decoration: none;
 }
@@ -56,28 +49,25 @@ a.ac-anchor:visited:active {
   vertical-align: middle;
   cursor: default;
   font-family: "Segoe UI", sans-serif;
-  font-size: 14px;
-  font-weight: 400;
-  padding: 4px 10px 6px 10px;
+  font-size: 15px;
+  font-weight: 500;
+  padding: 4px 10px 5px 10px;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
   height: 31px;
-  background-color: white;
-  color: #0078d7;
+  background-color: rgba(0, 0, 0, 0.1);
+  color: white;
+  border: 2px solid transparent;
 }
 
 .ac-pushButton:hover {
-  background-color: #0078d7;
-  color: #fff;
+  border: 2px solid rgba(0, 0, 0, 0.2);
 }
 
 .ac-pushButton:active {
-  background-color: #0078d7;
-  color: #fff;
-}
-
-.ac-pushButton {
-  border: 2px solid #dcdcdc;
-  border-radius: 20px;
-  line-height: 20px;
+  background-color: rgba(0, 0, 0, 0.3);
 }
 
 .ac-input {
@@ -101,33 +91,4 @@ a.ac-anchor:visited:active {
 .ac-input.ac-textInput, .ac-input.ac-numberInput, .ac-input.ac-dateInput, .ac-input.ac-timeInput, .ac-input.ac-multichoiceInput {
   border: 1px solid #DDDDDD;
   padding: 4px 8px 4px 8px;
-}
-
-/*Bot hexagon*/
-.hexagon {
-  overflow: hidden;
-  visibility: hidden;
-  transform: rotate(120deg);
-  cursor: pointer;
-  width: 50px;
-  height: 40px;
-  margin: 2px 5px -20px 0px;
-}
-
-.hexagon-in1 {
-  overflow: hidden;
-  width: 100%;
-  height: 100%;
-  transform: rotate(-60deg);
-}
-
-.hexagon-in2 {
-  width: 100%;
-  height: 100%;
-  background-repeat: no-repeat;
-  background-position: 50%;
-  background-image: url(../assets/bot-framework.png);
-  background-size: 50px 50px;
-  visibility: visible;
-  transform: rotate(-60deg);
 }
