--- a/source/nodejs/adaptivecards-designer/css/outlook.css
+++ b/source/nodejs/adaptivecards-designer/css/outlook.css
@@ -1,3 +1,8 @@
+.outlook-frame {
+  border: 1px solid #F1F1F1;
+  box-shadow: 0 0 15px -5px rgba(0, 0, 0, 0.4);
+}
+
 .ac-image.ac-selectable {
   cursor: pointer;
 }
