--- a/source/nodejs/adaptivecards-designer/css/card-designer.css
+++ b/source/nodejs/adaptivecards-designer/css/card-designer.css
@@ -22,15 +22,15 @@
 }
 
 .acd-peer:hover {
-    background-color: rgba(0, 0, 255, 0.05);
+    border: 1px solid blue;
 }
 
 .acd-peer.selected {
-    background-color: rgba(255, 0, 0, 0.05);
+    border: 1px solid red !important;
 }
 
 .acd-peer.dragover {
-    border: 1px dashed red;
+    border: 1px dashed green;
 }
 
 .acd-peer.dragover:hover {
@@ -38,12 +38,10 @@
 }
 
 .acd-peer.dragging {
-    border: 1px solid red;
 }
 
 .acd-peer.dragging:hover {
-    border: 1px solid red;
-    background-color: rgba(255, 0, 0, 0.05) !important;
+    border: 1px solid green;
 }
 
 .acd-separation {
